Changed chat page to index. Fixed functionality and made it work in the chat window.

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -39,6 +39,7 @@
             font-size: 20px;
             padding: 15px 25px;
             cursor: pointer;
+            text-decoration: none;
         }
 
         .button:hover {
@@ -94,7 +95,7 @@
 <body>
 <header>
     <h1 class="title">Medical Assistant</h1>
-    <button class="button">Chat Now!</button>
+    <a href="index.html" class="button">Chat Now!</a>
 </header>
 
 <nav>
