Redict to home page after a user is created via ok button

--- a/html/create_user.html
+++ b/html/create_user.html
@@ -132,7 +132,7 @@ function showModal(message) {
 
 function closeModal() {
   document.getElementById('successModal').style.display = 'none';
-  window.location.href = '/';
+  window.location.href = '/home_page.html';
 }
 </script>
 </body>
