--- a/html/create_user.html
+++ b/html/create_user.html
@@ -66,6 +66,9 @@
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="Enter your email" required />
 
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" placeholder="Create a password" required />
+
         <label for="sex">Sex</label>
         <select id="sex" name="sex" required>
             <option value="">Select sex</option>
@@ -101,7 +104,8 @@ document.getElementById('createUserForm').addEventListener('submit', async funct
         email: document.getElementById('email').value,
         sex: document.getElementById('sex').value,
         age: parseInt(document.getElementById('age').value),
-        phone: document.getElementById('phone').value
+        phone: document.getElementById('phone').value,
+        password: document.getElementById('password').value
     };
 
     try {
