--- a/html/home_page.html
+++ b/html/home_page.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #4CAF50; /* darker green header */
+            background-color: #4CAF50;
             color: #fff;
             display: flex;
             justify-content: space-between;
@@ -23,41 +23,73 @@
             width: 100%;
             top: 0;
             z-index: 2;
+            box-sizing: border-box;
         }
 
         .title {
-            font-size: 28px;
+            font-size: 22px;
             margin: 0;
             text-transform: uppercase;
             letter-spacing: 2px;
+            font-weight: bold;
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .button-container {
             display: flex;
             align-items: center;
+            gap: 8px;
+            flex-wrap: wrap;
         }
 
         .button {
-            background-color: #2b8a28; /* button color */
-            color: #E2F3DE;
-            border: none;
+            min-width: 90px;
             border-radius: 10px;
-            font-size: 16px;
-            padding: 10px 20px;
+            font-size: 15px;
+            padding: 7px 18px;
             cursor: pointer;
             text-decoration: none;
+            transition: background 0.2s, color 0.2s, box-shadow 0.2s;
+            margin: 0;
+            text-align: center;
+            font-weight: bold;
+            border: 2px solid #2b8a28;
+            box-sizing: border-box;
         }
 
-        .button:first-child {
-            margin-right: 15px; /* Space between Chat Now! and Create New User */
+        .button-chat {
+            background: #fff;
+            color: #2b8a28;
+            border: 2px solid #2b8a28;
+        }
+        .button-chat:hover {
+            background: #e8f5e9;
+            color: #176617;
         }
 
-        .button:last-child {
-            margin-right: 20px; /* Add explicit space on the right */
+        .button-login, .button-create {
+            background-color: #2b8a28;
+            color: #fff;
+            border: 2px solid #2b8a28;
+        }
+        .button-login:hover, .button-create:hover {
+            background-color: #176617;
+            color: #fff;
         }
 
-        .button:hover {
-            background-color: #7ed17b; /* hover effect */
+        @media (max-width: 600px) {
+            .title {
+                font-size: 16px;
+            }
+            .button {
+                min-width: 70px;
+                font-size: 13px;
+                padding: 5px 0;
+            }
+            header {
+                padding: 6px 6px;
+            }
         }
 
         nav {
@@ -110,8 +142,9 @@
 <header>
     <h1 class="title">Medical Assistant</h1>
     <div class="button-container">
-        <a href="index.html" class="button">Chat Now!</a>
-        <a href="create_user.html" class="button">Create New User</a>
+        <a href="index.html" class="button button-chat">Chat Now!</a>
+        <a href="login.html" class="button button-login">Login</a>
+        <a href="create_user.html" class="button button-create">Create Account</a>
     </div>
 </header>
 
