--- a/html/home_page.html
+++ b/html/home_page.html
@@ -153,7 +153,8 @@
     <h1 class="title">Medical Assistant</h1>
     <div class="button-container">
         <a href="index.html" class="button button-chat">Chat Now!</a>
-        <a href="login.html" class="button button-login">Login</a>
+        <span id="userNameDisplay" class="button button-login" style="display:none;"></span>
+        <a href="login.html" class="button button-login" id="loginBtn">Login</a>
         <a href="create_user.html" class="button button-create" id="createAccountBtn">Create Account</a>
         <button class="button button-logout" id="logoutBtn" style="display:none;">Logout</button>
     </div>
@@ -180,20 +181,34 @@
 </footer>
 
 <script>
-// Show Logout if logged in, else show Create Account
+// Show Logout if logged in, else show Create Account. Show user name instead of Login if logged in.
 window.addEventListener('DOMContentLoaded', function() {
     const token = localStorage.getItem('userToken');
+    const user = localStorage.getItem('user');
     const createBtn = document.getElementById('createAccountBtn');
     const logoutBtn = document.getElementById('logoutBtn');
-    if (token) {
+    const loginBtn = document.getElementById('loginBtn');
+    const userNameDisplay = document.getElementById('userNameDisplay');
+    if (token && user) {
         createBtn.style.display = 'none';
         logoutBtn.style.display = 'inline-block';
+        loginBtn.style.display = 'none';
+        userNameDisplay.style.display = 'inline-block';
+        try {
+            const userObj = JSON.parse(user);
+            userNameDisplay.textContent = userObj.name ? userObj.name : 'User';
+        } catch (e) {
+            userNameDisplay.textContent = 'User';
+        }
     } else {
         createBtn.style.display = 'inline-block';
         logoutBtn.style.display = 'none';
+        loginBtn.style.display = 'inline-block';
+        userNameDisplay.style.display = 'none';
     }
     logoutBtn && logoutBtn.addEventListener('click', function() {
         localStorage.removeItem('userToken');
+        localStorage.removeItem('user');
         location.reload();
     });
 });
