improve user page flow

--- a/html/login.html
+++ b/html/login.html
@@ -112,7 +112,7 @@ document.getElementById('loginForm').addEventListener('submit', async function(e
             // Store the token or user info if needed
             localStorage.setItem('userToken', result.token);
             localStorage.setItem('user', JSON.stringify(result.user));
-            window.location.href = '/RasaMedical/html/home_page.html';
+            window.location.href = '/RasaMedical/html/user.html';
         } else {
             showModal('Login failed: ' + result.error);
         }
