--- a/html/user.html
+++ b/html/user.html
@@ -10,9 +10,91 @@
             margin: 0;
             color: #2b2b2b;
         }
+        header {
+            background-color: #4CAF50;
+            color: #fff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 2;
+            box-sizing: border-box;
+        }
+        .title {
+            font-size: 22px;
+            margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-weight: bold;
+            white-space: nowrap;
+            flex-shrink: 0;
+        }
+        .button-container {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+        .button {
+            min-width: 90px;
+            border-radius: 10px;
+            font-size: 15px;
+            padding: 7px 18px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.2s, color 0.2s, box-shadow 0.2s;
+            margin: 0;
+            text-align: center;
+            font-weight: bold;
+            border: 2px solid #2b8a28;
+            box-sizing: border-box;
+        }
+        .button-chat {
+            background: #fff;
+            color: #2b8a28;
+            border: 2px solid #2b8a28;
+        }
+        .button-chat:hover {
+            background: #e8f5e9;
+            color: #176617;
+        }
+        .button-login, .button-create {
+            background-color: #2b8a28;
+            color: #fff;
+            border: 2px solid #2b8a28;
+        }
+        .button-login:hover, .button-create:hover {
+            background-color: #176617;
+            color: #fff;
+        }
+        .button-logout {
+            background-color: #444;
+            color: #fff;
+            border: 2px solid #444;
+        }
+        .button-logout:hover {
+            background-color: #222;
+            border-color: #222;
+        }
+        @media (max-width: 600px) {
+            .title {
+                font-size: 16px;
+            }
+            .button {
+                min-width: 70px;
+                font-size: 13px;
+                padding: 5px 0;
+            }
+            header {
+                padding: 6px 6px;
+            }
+        }
         .container {
             max-width: 900px;
-            margin: 40px auto;
+            margin: 100px auto 40px auto;
             background: #fff;
             border-radius: 12px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
@@ -83,7 +165,16 @@
     </style>
 </head>
 <body>
-<div class="container">
+<header>
+    <h1 class="title">Medical Assistant</h1>
+    <div class="button-container">
+        <a href="index.html" class="button button-chat">Chat Now!</a>
+        <a href="login.html" class="button button-login" id="loginBtn">Login</a>
+        <a href="create_user.html" class="button button-create" id="createAccountBtn">Create Account</a>
+        <button class="button button-logout" id="logoutBtn" style="display:none;">Logout</button>
+    </div>
+</header>
+<div class="container" style="margin-top: 90px;">
     <a href="home_page.html" class="back-link">&larr; Back to Home</a>
     <div class="profile-section">
         <div class="profile-info">
@@ -108,6 +199,28 @@
     </div>
 </div>
 <script>
+// Show Logout if logged in, else show Create Account. Show user name instead of Login if logged in.
+window.addEventListener('DOMContentLoaded', function() {
+    const token = localStorage.getItem('userToken');
+    const user = localStorage.getItem('user');
+    const createBtn = document.getElementById('createAccountBtn');
+    const logoutBtn = document.getElementById('logoutBtn');
+    const loginBtn = document.getElementById('loginBtn');
+    if (token && user) {
+        createBtn.style.display = 'none';
+        logoutBtn.style.display = 'inline-block';
+        loginBtn.style.display = 'none';
+    } else {
+        createBtn.style.display = 'inline-block';
+        logoutBtn.style.display = 'none';
+        loginBtn.style.display = 'inline-block';
+    }
+    logoutBtn && logoutBtn.addEventListener('click', function() {
+        localStorage.removeItem('userToken');
+        localStorage.removeItem('user');
+        location.href = 'home_page.html';
+    });
+});
 // Load user info from localStorage
 const user = localStorage.getItem('user');
 if (!user) {
